--- a/task03_0606/Views/Order/Order_list_bussiness.cshtml
+++ b/task03_0606/Views/Order/Order_list_bussiness.cshtml
@@ -23,16 +23,16 @@
 <div class="row">
     @foreach (var order in Model)
             {
-        <div class="card cardMenuItem col-sm-12 col-md-4 col-xl-3 ">
+        <div class="card cardMenuItem col-sm-12 col-md-4 col-xl-3" >
             <div class="card-header bg-success">
                 <p class="card-text text-white">
                     桌號：@order.tableId &nbsp 電話：@order.phoneNum <br />
-                    <small class="text-white">@string.Format("{0:T}", Convert.ToDateTime(order.orderDate))</small>
-                    <button class="btn btn-sm btn-success pull-right" disabled>@order.orderId+出餐</button>
+                    <small class="text-white">@string.Format("{0:yyyy/MM/dd/ HH:mm}", Convert.ToDateTime(order.orderDate))</small>
+                    <button class="btn btn-sm btn-success pull-right" disabled onclick="orderComplete(@order.orderId)"><b>@order.orderId+出餐</b></button>
                 </p>
 
             </div>
-            <ul class="list-group list-group-flush">
+            <ul class="list-group list-group-flush" >
                 @{
 
                     using (task03_0606.Models.FoodCourtDBEntities db = new task03_0606.Models.FoodCourtDBEntities())
@@ -48,24 +48,21 @@
 
                         foreach (var detail in detailList)
                         {
-                            <li class="list-group-item container-fluid">
+                            <li class="list-group-item container-fluid" data-orderid="@order.orderId"  data-productid="@detail.productID">
                                 <div class="row">
                                     <div class="col-xs-3">
                                         <img style="width:50px; height:40px" src="~/photo/@detail.Product.productPicture">
                                     </div>
                                     <div class="col-xs-8">
                                         <p class="card-text">&nbsp @detail.Product.productName <br /> &nbsp @detail.productCount 份 &nbsp 備註：@detail.customerNote</p>
-                                        <p class="card-text">@((detail.productionStatus) == 1 ? "準備中" : "OK")</p>
+                                        <p style="display:none" class="card-text">@((detail.productionStatus) == 1 ? "準備中" : "OK")</p>
                                         
                                         
                                     </div>
                                     <div class="col-xs-1" data-status="@detail.productionStatus"></div>
-                                       
                                 </div>
                             </li>
                         }
-
-                       
                     }
                 }
             </ul>
@@ -77,10 +74,8 @@
 </div>
 
 <div class="row">
-    <div class="col-sm-12 col-md-5">
-        <div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite">第 21 筆 到 第 29 筆, 共 29 筆</div>
-    </div>
-    <div id="page" class="col-sm-12 col-md-7">
+    <div id="pageList" class="col-sm-12 col-md-12">  </div>
+    <div id="page" class="col-sm-12 col-md-12">
         <ul class="pagination pagination-sm">
             <li class="page-item prev"><a class="page-link" href="#">上一頁</a></li>
             <li class="page-item"><a class="page-link" href="#">1</a></li>
@@ -98,66 +93,100 @@
 
 <script>
 
-    $('.form_ele').attr('disabled', true);
-
-    $('.form_ele').removeAttr('disabled');
-
-
+    //點選明細 標示產品準備狀況
     $(".list-group-item.container-fluid").click(function () {
-        
-        //console.log($(this).find("i").length)
-
+        //console.log($(this).find("i").length);
+        //console.log(this);
+        //console.log($(this).data("orderid"));
         if ($(this).find("i").length > 0) {
             $(this)
                  .find("div.col-xs-1")
-                 .find('i').remove();  
+                 .find('i').remove();
+            $(this).find("div.col-xs-1").data("status", "1");
         }
         else {
             $(this)
                 .find("div.col-xs-1")
                 .append('<i class="fa fa-fw fa-check-circle"></i>')
                 .css("color", "green");
+            $(this).find("div.col-xs-1").data("status", "2");
+        }
+        productId = $(this).data("productid");
+        orderId = $(this).data("orderid");
+        console.log("productId：" + productId + "   orderId：" + orderId);
+
+     $.ajax({
+             method: "post",
+             dataType: "json",
+             url: "@Url.Action("Order_list_chickToDatabase_bussiness", "Order")",
+             data: {
+
+                 productId_ok: parseInt(productId),
+                 orderId_ok: parseInt(orderId),
+             }
+     })
+
+    })
+
+    //餐點都準備Ok, 訂單按鈕可點選
+    $(".card.cardMenuItem").click(function () {
+        //console.log($(this).find("li").length);
+        //console.log($(this).find(".col-xs-1"));
+        var orderOk = $(this).find("li").length * 2;
+        var totalCount = 0;
+        //alert("orderok：" + orderOk + "  totalCount：" + totalCount);
+
+        $(this).find(".col-xs-1").each(function () {
+            //console.log($(this).data("status"));
+            totalCount += parseInt($(this).data("status"));
+        });
+        //console.log(totalCount);
+        // alert("orderok：" + orderOk + "  totalCount：" + totalCount);
+        if (totalCount == orderOk) {
+            $(this).find(".btn.btn-sm").removeAttr('disabled');
+        }
+        if (totalCount < orderOk) {
+            $(this).find(".btn.btn-sm").attr('disabled', true);
         }
     })
 
-    
-
-
     //訂單出餐
-    $("#orderOK").click(function () {
-
+    function orderComplete(orderId) {
         $.ajax({
             method: "post",
             dataType: "json",
-            url: "@Url.Action("Order_list_chickToDatabase_bussiness", "Order")",
+            url: "@Url.Action("Order_list_bussiness", "Order")",
             data: {
-                orderDetail_time_input: $("#orderDetail_time").text(),
-                orderDetail_customerPhone_input: $("#orderDetail_customerPhone").text(),
-                orderDetail_orderID_input: $("#orderDetail_orderID").text(),
-                orderDetail_seatID_input: $("#orderDetail_seatID").text(),
+                orderId_ok: parseInt(orderId),
             }
         })
-          .done(function (data) {
-                console.log(data);
-                alert("確定出餐");
-                $('#exampleModalCenter').modal('hide');
-
-            })
+    .done(function (data) {
+        alert("確定訂單編號: " + orderId + " 出餐")
+        window.location.reload();
     })
 
-    $(function () {
+    }
 
+   
+
+    $(function () {
+        //if ($ === jQuery) alert("true");
         //實現分頁思路:
-        var pageSize = 8;      //每頁顯示數據條數
+        var pageSize = 4;      //每頁顯示數據條數
         var currentPage = 1;   //當前頁數
         var prevPage = 0;
-        var totalSize = $(".cardMenuItem").length; //獲取總數據
-        var totalPage = Math.round(totalSize / pageSize); //計算總頁數
-        $(".cardMenuItem:gt(7)").hide(); //設置首頁顯示8 (8-1) 條數據
+        var totalSize = $(".card.cardMenuItem").length; //獲取總數據
 
+        //alert(totalSize);
+
+        var totalPage = Math.ceil(totalSize / pageSize); //計算總頁數
+        $(".card.cardMenuItem:gt(" + (pageSize - 1) + ")").hide(); //設置首頁顯示8 (8-1) 條數據
+
+        //增加項目列表
+        $("div#pageList").append('<p>  第' + ((pageSize * currentPage) - (pageSize - 1)) + '筆 到 第 ' + (pageSize * currentPage) + '筆, 共 ' + totalSize + '筆 </p>');
 
         //移除原有 .pagination 裡的元素 , append "前一頁" li
-        $(".pagination").empty().append('<li class="page-item prev"><a class="page-link" href="#">❮</a></li>');
+        $(".pagination").empty().append('</p><li class="page-item prev"><a class="page-link" href="#">❮</a></li>');
         //依總分頁數 , append 各分頁 li
         for (var index = currentPage; index <= totalPage; index++) {
             $(".pagination").append('<li class="page-item pageItems"><a class="page-link" href="#">' + index + '</a></li>');
@@ -174,7 +203,7 @@
                 $(".current_page").text(++currentPage);  //當前頁數先+1
                 var start = pageSize * (currentPage - 1);
                 var end = pageSize * currentPage;
-                $.each($('.cardMenuItem'), function (index, item) {
+                $.each($('.card.cardMenuItem'), function (index, item) {
                     if (index >= start && index < end) {
                         $(this).show();
                     }
@@ -182,6 +211,9 @@
                         $(this).hide();
                     }
                 });
+
+                //增加項目列表
+                $("div#pageList").empty().append('<p>  第' + (start + 1) + '筆 到 第 ' + end + '筆, 共 ' + totalSize + '筆 </p>');
 
             }
         });
@@ -194,7 +226,7 @@
                 $(".current_page").text(--currentPage);  //當前頁數先-1
                 var start = pageSize * (currentPage - 1);
                 var end = pageSize * currentPage;
-                $.each($('.cardMenuItem'), function (index, item) {
+                $.each($('.card.cardMenuItem'), function (index, item) {
                     if (index >= start && index < end) {
                         $(this).show();
                     }
@@ -202,6 +234,9 @@
                         $(this).hide();
                     }
                 });
+                //增加項目列表
+                $("div#pageList").empty().append('<p>  第' + (start + 1) + '筆 到 第 ' + end + '筆, 共 ' + totalSize + '筆 </p>');
+
             }
         });
 
@@ -217,7 +252,7 @@
 
             var start = pageSize * (currentPage - 1);
             var end = pageSize * currentPage;
-            $.each($('.cardMenuItem'), function (index, item) {
+            $.each($('.card.cardMenuItem'), function (index, item) {
                 if (index >= start && index < end) {
                     $(this).show();
                 }
@@ -225,6 +260,9 @@
                     $(this).hide();
                 }
             });
+            //增加項目列表
+            $("div#pageList").empty().append('<p>  第' + (start + 1) + '筆 到 第 ' + end + '筆, 共 ' + totalSize + '筆 </p>');
+
 
         });
 
@@ -233,18 +271,35 @@
         statusCheck();
     });
 
-    //如果產品狀態==2, 加上check icon
+    //確認訂單狀況， 所有產品狀態為 2 ==>出餐按鈕可點選
     function statusCheck() {
+        //計算單張訂單產品狀態總和 = 產品項目*2
+        $(".card.cardMenuItem").each(function () {
+            //console.log($(this).find(".col-xs-1"));
+            var orderOk = $(this).find("li").length * 2;
+            var totalCount = 0;
+            $(this).find(".col-xs-1").each(function () {
+                //console.log($(this).data("status"));
+                totalCount += parseInt($(this).data("status"));
+            });
+
+            //console.log("orderok：" + orderOk + "  totalCount：" + totalCount);
+            if (totalCount == orderOk) {
+                $(this).find(".btn.btn-sm").removeAttr('disabled');
+            }
+            if (totalCount < orderOk) {
+                $(this).find(".btn.btn-sm").attr('disabled', true);
+            }
+        });
+        //如果產品狀態==2, 加上check icon
         $("div.col-xs-1").each(function () {
             //console.log($(this).data("status"));
             if ($(this).data("status") == 2) {
                 $(this).append('<i class="fa fa-fw fa-check-circle"></i>')
                     .css("color", "green");
             }
-            else { $(this).append('');}
+            else { $(this).append(''); }
         })
-      
-        
     }
 
 </script>
