廠商訂單 產品狀態

--- a/task03_0606/Views/Order/Order_detail_costomer.cshtml
+++ b/task03_0606/Views/Order/Order_detail_costomer.cshtml
@@ -118,7 +118,7 @@
                         <td data-th="單價：">@item.unitPrice</td>
                         <td class="amount" data-th="小計：">@(item.unitPrice * item.productCount)</td>
                         <td data-th="備註：">@item.customerNote</td>
-                        <td  data-th="餐點狀況：">@((item.productionStatus) == 1 ? "餐點準備中" : "完成待送餐")</td>
+                        <td  data-th="餐點狀況：">@item.productionStatus @((item.productionStatus) == 1 ? "餐點準備中" : "完成待送餐")</td>
                     </tr>
                 }
 
