--- a/task03_0606/Views/Shared/_Layout.cshtml
+++ b/task03_0606/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
                                 <a href="~/Products/Riceproducts"><i class="fa fa-fw fa-cutlery"></i>米飯類</a>
                             </li>
                             <li>
-                                <a href="~/Products/Riceproducts"><i class="fa fa-fw fa-cutlery"></i>速食類</a>
+                                <a href="~/Products/Fastfoodproducts"><i class="fa fa-fw fa-cutlery"></i>速食類</a>
                             </li>
                         </ul>
                     </li>
