--- a/task03_0606/Views/Products/Dessertproducts.cshtml
+++ b/task03_0606/Views/Products/Dessertproducts.cshtml
@@ -9,9 +9,9 @@
 <link href="/css/Astyle.css" rel="stylesheet" type="text/css" />
 <script src="/js/Aindex.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-@*<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>*@
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 @*<header>
     <ul>
@@ -21,14 +21,11 @@
     </ul>
 </header>*@
 
-
-<div class="row">
-    @foreach (task03_0606.Models.FoodProduct db in Model)
+<div class='row'>
+    @foreach(task03_0606.Models.FoodProduct db in Model)
     {
 
-        <div class="product--blue col-sm-2" id="content">
-
-
+        <div class='product--blue col-sm-2' id="content">
             <div class="row" id="list"></div>
             <!-- Button trigger modal -->
             <img src='~/photo/@db.productPicture' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter.@db.productID" />
@@ -51,7 +48,7 @@
                         <div class="modal-footer">
 
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary" onclick="AddToCart(@db.productID)">Add to basket</button>
+                            <button type="button" class="btn btn-primary">Add to basket</button>
                         </div>
                     </div>
                 </div>
@@ -59,7 +56,7 @@
             <div class='product_inner'>
                 <p>@db.productName</p>
                 <p>Price $@db.productPrice</p>
-                <button id="button" class="btn" type="button" onclick="AddToCart(@db.productID)">Add to basket</button>
+                <button>Add to basket</button>
             </div>
 
             <div class='product_overlay'>
@@ -67,6 +64,6 @@
                 <i class='fa fa-check'></i>
             </div>
         </div>
-
     }
+
 </div>
