--- a/task03_0606/css/Astyle.css
+++ b/task03_0606/css/Astyle.css
@@ -142,7 +142,7 @@ header i:nth-of-type(2) {
                 border: 1px solid rgba(255, 255, 255, 0.5);
                 color: #FFF;
                 border-radius: 3px;
-                /*padding: 1em 3em;*/
+                padding: 1em 3em;
                 margin: 1em 0 0 0;
                 background: none;
                 cursor: pointer;
