--- a/task03_0606/Views/Order/Order_deteail_bussiness.cshtml
+++ b/task03_0606/Views/Order/Order_deteail_bussiness.cshtml
@@ -118,7 +118,7 @@
         <tr>
             <td data-th="接單時間："> @string.Format("{0:yyyy/MM/dd/ HH:mm}", Convert.ToDateTime(order.orderTime))</td>
             <td data-th="客戶電話："> @order.customerPhone </td>
-            <td data-th="訂單單號："> @order.orderId</td>
+            <td data-th="訂單單號："> @string.Format("{0:yyyyMMdd}{1}", Convert.ToDateTime(order.orderTime), (order.orderId + 10000))</td>
             <td data-th="座位："> @order.seatID</td>
             <td data-th="產品編號：" style="display:none"> @order.productID</td>
             <td data-th="產品編號："> @order.productID</td>
